# Board-Game-Insert-Generator

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ACCESSIBILITY_MODEL.md  AGENT_ROLES.md  APPEARANCE_CONTRACT.md  ARCHITECTURE.md  ASSET_MODEL_STRATEGY.md  AUTONOMOUS_COMPLETION_CHARTER.md  AUTONOMY_PROTOCOL.md  AUTONOMY_RUNBOOK.md  BACKLOG.md  BOX_FILL_SOLVER_ROADMAP.md  CAD_IR_CONTRACT.md  CALIBRATION_PROTOCOL.md  CANONICAL_PRODUCT_VISION.md  CAPABILITY_MAP.md  CONFIG_SCHEMA.md  CONTAINER_DERIVATION_CONTRACT.md  EXECUTION_LOOP.md  EXPANDABLE_ENVELOPE_CONTRACT.md  EXPLODED_VIEW_STRATEGY.md  FEATURE_TAXONOMY.md  FLAT_STACK_RESERVATION_CONTRACT.md  FUNCTIONAL_CAD_CONTRACT.md  FUSION_360_GATE_REPORT.md  FUSION_360_STRATEGY.md  FUSION_ONLY_MVP_CONTRACT.md  FUSION_SMOKE_TEST_AUTOMATION.md  FUSION_UI_STRATEGY.md  FUTURE_PRODUCT_HORIZONS.md  GEOMETRY_MODEL.md  GLOSSARY.md  HUMAN_GATES.md  LAYER_AND_STACKING_MODEL.md  MASTER_EXECUTION_PLAN.md  MVP_EXECUTION_PLAN.md  MVP_V01_ACCEPTANCE_CONTRACT.md  MVP_V01_REALITY_AUDIT.md  NEXT_ACTIONS.md  NORTH_STAR.md  P19_RECOMMENDATION.md  P20_RECOMMENDATION.md  (+138 more)
examples/: box_fill_collision_v0.json  box_fill_manual_v0.json  box_fill_outside_v0.json  box_fill_overallocation_v0.json  box_fill_partial_coverage_v0.json  box_fill_reservation_collision_v0.json  box_fill_valid_v0.json  cards_and_tokens.json  p43_v01_functional_project.json  preprint_check_v0.json  simple_3d_grid.json  simple_3d_reservations.json  simple_asset_executable_plan.json  simple_asset_grouping.json  (+10 more)
(+699 files in other folders)
